# craft

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml
docs/: craftrc-format.md  installation.md  usage.md
domains/coding/: build.yaml  config.yaml  git.yaml
domains/linting/: config.yaml  mypy.yaml
domains/linting/tools/: black.yaml  ruff.yaml
domains/slate/: config.yaml
domains/slate/tools/: embark.yaml  namer.yaml
examples/: demo.py
scripts/: generate_domains.py
src/craft_cli/: __init__.py  config.py  core.py  main.py
src/craft_cli/domains/coding/: test.yaml
src/craft_cli/domains/creative/: brainstorm.yaml  mood.yaml  name.yaml  plot.yaml  story.yaml
src/craft_cli/domains/data/: analyze.yaml  clean.yaml  transform.yaml  validate.yaml  visualize.yaml
src/craft_cli/domains/design/: icons.yaml  layout.yaml  mockup.yaml  palette.yaml  typography.yaml
src/craft_cli/domains/devops/: backup.yaml  deploy.yaml  logs.yaml  monitor.yaml  scale.yaml
src/craft_cli/domains/research/: cite.yaml  extract.yaml  search.yaml  summarize.yaml  trends.yaml
tests/: conftest.py  test_core.py  test_main.py
